dto_mapper_derive/tests/compile_fail/enum_tuple.stderr
error: Unsupported shape `unnamed fields`. Expected named fields, one unnamed field, or no fields.
 --> tests/compile_fail/enum_tuple.rs:7:10
  |
7 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
